fixed spacing on mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -51,6 +51,7 @@
             .welcome-text-container {
                 height: auto;
                 margin-top: 20px;
+                margin-left: 0;
             }
         }
     }
